--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,21 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# vim
+*.*.swp
+*.swp
+
+# emacs
+.#*.*
+*~
+*.*~
+
+# WebStorm
+.idea/
+
+# zed
+.zedstate
+
+# codekit
+config.codekit
