--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "lodash": "~3.10.0"
   }
 }
