--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-jade": "^1.0.0",
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.0"
